[gd_scene load_steps=74 format=2]

[ext_resource path="res://scenes/Main_Menu.gd" type="Script" id=1]
[ext_resource path="res://code/systems.gd" type="Script" id=2]
[ext_resource path="res://images/mainmenu buttons/invisMenuButtons.png" type="Texture" id=3]
[ext_resource path="res://images/mainmenu buttons/Start button/Button 1 click/Button 1 click_00000.png" type="Texture" id=4]
[ext_resource path="res://images/mainmenu buttons/Start button/Button 1 click/Button 1 click_00001.png" type="Texture" id=5]
[ext_resource path="res://images/mainmenu buttons/Start button/Button 1 click/Button 1 click_00002.png" type="Texture" id=6]
[ext_resource path="res://images/mainmenu buttons/Start button/Button 1 click/Button 1 click_00003.png" type="Texture" id=7]
[ext_resource path="res://images/mainmenu buttons/Start button/Button 1 click/Button 1 click_00004.png" type="Texture" id=8]
[ext_resource path="res://images/mainmenu buttons/Start button/Button 1 click/Button 1 click_00005.png" type="Texture" id=9]
[ext_resource path="res://images/mainmenu buttons/Start button/Button 1 click/Button 1 click_00006.png" type="Texture" id=10]
[ext_resource path="res://images/mainmenu buttons/Start button/Button 1 click/Button 1 click_00007.png" type="Texture" id=11]
[ext_resource path="res://images/mainmenu buttons/Start button/Button 1 click/Button 1 click_00008.png" type="Texture" id=12]
[ext_resource path="res://images/mainmenu buttons/Start button/Button 1 click/Button 1 click_00009.png" type="Texture" id=13]
[ext_resource path="res://images/mainmenu buttons/Start button/Button 1 hover/Button 1 hover_00000.png" type="Texture" id=14]
[ext_resource path="res://images/mainmenu buttons/Start button/Button 1 hover/Button 1 hover_00001.png" type="Texture" id=15]
[ext_resource path="res://images/mainmenu buttons/Start button/Button 1 hover/Button 1 hover_00002.png" type="Texture" id=16]
[ext_resource path="res://images/mainmenu buttons/Start button/Button 1 hover/Button 1 hover_00003.png" type="Texture" id=17]
[ext_resource path="res://images/mainmenu buttons/Start button/Button 1 hover/Button 1 hover_00004.png" type="Texture" id=18]
[ext_resource path="res://images/mainmenu buttons/Start button/Button 1 hover/Button 1 hover_00005.png" type="Texture" id=19]
[ext_resource path="res://images/mainmenu buttons/Start button/Button 1 hover/Button 1 hover_00006.png" type="Texture" id=20]
[ext_resource path="res://images/mainmenu buttons/Start button/Button 1 hover/Button 1 hover_00007.png" type="Texture" id=21]
[ext_resource path="res://images/mainmenu buttons/Start button/Button 1 hover/Button 1 hover_00008.png" type="Texture" id=22]
[ext_resource path="res://images/mainmenu buttons/Start button/Button 1 hover/Button 1 hover_00009.png" type="Texture" id=23]
[ext_resource path="res://images/mainmenu buttons/Start button/Button 1 hover/Button 1 hover_00010.png" type="Texture" id=24]
[ext_resource path="res://images/mainmenu buttons/Start button/Button 1 hover/Button 1 hover_00011.png" type="Texture" id=25]
[ext_resource path="res://images/mainmenu buttons/Start button/Button 1 hover/Button 1 hover_00012.png" type="Texture" id=26]
[ext_resource path="res://images/mainmenu buttons/Start button/Button 1 hover/Button 1 hover_00013.png" type="Texture" id=27]
[ext_resource path="res://images/mainmenu buttons/Start button/Button 1 hover/Button 1 hover_00014.png" type="Texture" id=28]
[ext_resource path="res://images/mainmenu buttons/Start button/Button 1 hover/Button 1 hover_00015.png" type="Texture" id=29]
[ext_resource path="res://images/mainmenu buttons/Start button/Button 1 hover/Button 1 hover_00016.png" type="Texture" id=30]
[ext_resource path="res://images/mainmenu buttons/Start button/Button 1 hover/Button 1 hover_00017.png" type="Texture" id=31]
[ext_resource path="res://images/mainmenu buttons/Start button/Button 1 hover/Button 1 hover_00018.png" type="Texture" id=32]
[ext_resource path="res://images/mainmenu buttons/Start button/Button 1 hover/Button 1 hover_00019.png" type="Texture" id=33]
[ext_resource path="res://images/mainmenu buttons/Start button/Button 1 hover/Button 1 hover_00020.png" type="Texture" id=34]
[ext_resource path="res://images/mainmenu buttons/Start button/Button 1 hover/Button 1 hover_00021.png" type="Texture" id=35]
[ext_resource path="res://images/mainmenu buttons/Start button/Button 1 hover/Button 1 hover_00022.png" type="Texture" id=36]
[ext_resource path="res://images/mainmenu buttons/Start button/Button 1 hover/Button 1 hover_00023.png" type="Texture" id=37]
[ext_resource path="res://images/mainmenu buttons/Start button/Button 1 hover/Button 1 hover_00024.png" type="Texture" id=38]
[ext_resource path="res://images/mainmenu buttons/Start button/Button 1 hover/Button 1 hover_00025.png" type="Texture" id=39]
[ext_resource path="res://images/mainmenu buttons/Start button/Button 1 hover/Button 1 hover_00026.png" type="Texture" id=40]
[ext_resource path="res://images/mainmenu buttons/Start button/Button 1 hover/Button 1 hover_00027.png" type="Texture" id=41]
[ext_resource path="res://images/mainmenu buttons/Start button/Button 1 hover/Button 1 hover_00028.png" type="Texture" id=42]
[ext_resource path="res://images/mainmenu buttons/Start button/Button 1 hover/Button 1 hover_00029.png" type="Texture" id=43]
[ext_resource path="res://images/mainmenu buttons/Start button/Button 1 hover/Button 1 hover_00030.png" type="Texture" id=44]
[ext_resource path="res://images/mainmenu buttons/Start button/Button 1 hover/Button 1 hover_00031.png" type="Texture" id=45]
[ext_resource path="res://images/mainmenu buttons/Start button/Button 1 hover/Button 1 hover_00032.png" type="Texture" id=46]
[ext_resource path="res://images/mainmenu buttons/Start button/Button 1 hover/Button 1 hover_00033.png" type="Texture" id=47]
[ext_resource path="res://images/mainmenu buttons/Start button/Button 1 hover/Button 1 hover_00034.png" type="Texture" id=48]
[ext_resource path="res://images/mainmenu buttons/Start button/Button 1 hover/Button 1 hover_00035.png" type="Texture" id=49]
[ext_resource path="res://images/mainmenu buttons/Start button/Button 1 hover/Button 1 hover_00036.png" type="Texture" id=50]
[ext_resource path="res://images/mainmenu buttons/Start button/Button 1 hover/Button 1 hover_00037.png" type="Texture" id=51]
[ext_resource path="res://images/mainmenu buttons/Start button/Button 1 hover/Button 1 hover_00038.png" type="Texture" id=52]
[ext_resource path="res://images/mainmenu buttons/Start button/Button 1 hover/Button 1 hover_00039.png" type="Texture" id=53]
[ext_resource path="res://images/mainmenu buttons/Start button/Button 1 hover/Button 1 hover_00040.png" type="Texture" id=54]
[ext_resource path="res://images/mainmenu buttons/Start button/Button 1 hover/Button 1 hover_00041.png" type="Texture" id=55]
[ext_resource path="res://images/mainmenu buttons/Start button/Button 1 unhover/Button 1 unhover_00062.png" type="Texture" id=56]
[ext_resource path="res://images/mainmenu buttons/Start button/Button 1 unhover/Button 1 unhover_00063.png" type="Texture" id=57]
[ext_resource path="res://images/mainmenu buttons/Start button/Button 1 unhover/Button 1 unhover_00064.png" type="Texture" id=58]
[ext_resource path="res://images/mainmenu buttons/Start button/Button 1 unhover/Button 1 unhover_00065.png" type="Texture" id=59]
[ext_resource path="res://images/mainmenu buttons/Start button/Button 1 unhover/Button 1 unhover_00066.png" type="Texture" id=60]
[ext_resource path="res://images/mainmenu buttons/Start button/Button 1 unhover/Button 1 unhover_00067.png" type="Texture" id=61]
[ext_resource path="res://images/mainmenu buttons/Start button/Button 1 unhover/Button 1 unhover_00068.png" type="Texture" id=62]
[ext_resource path="res://images/mainmenu buttons/Start button/Button 1 unhover/Button 1 unhover_00069.png" type="Texture" id=63]
[ext_resource path="res://images/mainmenu buttons/Start button/Button 1 unhover/Button 1 unhover_00070.png" type="Texture" id=64]
[ext_resource path="res://images/mainmenu buttons/Start button/Button 1 unhover/Button 1 unhover_00071.png" type="Texture" id=65]
[ext_resource path="res://images/mainmenu buttons/Start button/Button 1 unhover/Button 1 unhover_00072.png" type="Texture" id=66]
[ext_resource path="res://images/mainmenu buttons/Start button/Button 1 unhover/Button 1 unhover_00073.png" type="Texture" id=67]
[ext_resource path="res://images/mainmenu buttons/Start button/Button 1 unhover/Button 1 unhover_00074.png" type="Texture" id=68]
[ext_resource path="res://images/mainmenu buttons/Start button/Button 1 unhover/Button 1 unhover_00075.png" type="Texture" id=69]
[ext_resource path="res://images/mainmenu buttons/Start button/Button 1 unhover/Button 1 unhover_00076.png" type="Texture" id=70]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ) ],
"loop": false,
"name": "click",
"speed": 9.0
} ]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 38 ), ExtResource( 39 ), ExtResource( 40 ), ExtResource( 41 ), ExtResource( 42 ), ExtResource( 43 ), ExtResource( 44 ), ExtResource( 45 ), ExtResource( 46 ), ExtResource( 47 ), ExtResource( 48 ), ExtResource( 49 ), ExtResource( 50 ), ExtResource( 51 ), ExtResource( 52 ), ExtResource( 53 ), ExtResource( 54 ), ExtResource( 55 ) ],
"loop": true,
"name": "hover",
"speed": 38.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 56 ), ExtResource( 57 ), ExtResource( 58 ), ExtResource( 59 ), ExtResource( 60 ), ExtResource( 61 ), ExtResource( 62 ), ExtResource( 63 ), ExtResource( 64 ), ExtResource( 65 ), ExtResource( 66 ), ExtResource( 67 ), ExtResource( 68 ), ExtResource( 69 ), ExtResource( 70 ) ],
"loop": true,
"name": "unhover",
"speed": 25.0
} ]

[node name="Main_Menu" type="Node"]
script = ExtResource( 1 )

[node name="Systems" type="Node" parent="."]
script = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Load" type="Button" parent="CanvasLayer"]
margin_left = 170.0
margin_top = 520.0
margin_right = 233.0
margin_bottom = 540.0
text = "Load"

[node name="Settings" type="Button" parent="CanvasLayer"]
margin_left = 170.0
margin_top = 560.0
margin_right = 233.0
margin_bottom = 580.0
text = "Settings"

[node name="Exit" type="Button" parent="CanvasLayer"]
margin_left = 170.0
margin_top = 600.0
margin_right = 233.0
margin_bottom = 620.0
text = "Exit"

[node name="Start" type="TextureButton" parent="CanvasLayer"]
margin_left = 1200.0
margin_top = 386.0
margin_right = 1920.0
margin_bottom = 488.0
grow_horizontal = 0
texture_normal = ExtResource( 3 )

[node name="Load2" type="TextureButton" parent="CanvasLayer"]
visible = false
margin_left = 1200.0
margin_top = 386.0
margin_right = 1920.0
margin_bottom = 488.0

[node name="Animations" type="Node" parent="."]

[node name="Start" type="Node" parent="Animations"]

[node name="Click" type="AnimatedSprite" parent="Animations/Start"]
visible = false
position = Vector2( 1525, 440 )
frames = SubResource( 2 )
animation = "click"

[node name="Hover" type="AnimatedSprite" parent="Animations/Start"]
visible = false
position = Vector2( 1400, 440 )
frames = SubResource( 1 )
animation = "hover"

[node name="Unhover" type="AnimatedSprite" parent="Animations/Start"]
visible = false
position = Vector2( 1472, 444 )
frames = SubResource( 3 )
animation = "unhover"
[connection signal="pressed" from="CanvasLayer/Load" to="." method="_on_Load_pressed"]
[connection signal="pressed" from="CanvasLayer/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="CanvasLayer/Exit" to="." method="_on_Quit_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/Start" to="." method="_on_Start_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/Start" to="." method="_on_Start_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/Start" to="." method="_on_Start_pressed"]
